# TensorMesh

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  TODO.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.github/workflows/: ci.yml  docs.yml
_modules/: index.html
_modules/tensormesh/: material.html
_modules/torch_sla/: sparse_tensor.html
_sources/api/: functional.rst.txt
api/: assemble.html  dataset.html  distributed.html  element.html  functional.html  index.html  material.html  mesh.html  nn.html  ode.html  operator.html  optimizer.html  sparse.html  visualization.html
assets/: logo_prompt.txt
benchmark/assemble/: skfem_compare.py  skfem_compare_2d.csv  skfem_compare_3d.csv
benchmark/docs/: FEM_CPU_GPU_BENCHMARK.md  PERFORMANCE_NOTES.md  PIPELINE_BENCHMARK_RESULTS.md  README.md  SOLVER_INSTALLATION_STATUS.md
benchmark/pipeline/: compare_linear_poisson.colab.ipynb  compare_linear_poisson.py  compare_linear_wave.py
benchmark/scripts/: analyze_results.py  analyze_scaling.py  check_1m.py  check_fix.py  final_summary.py  generate_fem_report.py  generate_report.py  generate_separate_reports.py  plot_pipeline_comparison.py  plot_results.py  plot_separate_problems.py  profile_gpu.py  profile_memory.py  run_and_plot.py  run_full_loss_comparison.py  run_full_matrix.py
benchmark/solve/: test.py
community/: citing.html  contributing.html  discord.html  github_discussions.html  github_issues.html  index.html
docs/: Makefile  TRANSLATION_GUIDE.md  requirements-translate.txt  requirements.txt
docs/scripts/: batched_workflows_figures.py  differentiability_figures.py  (+2 more)
example_gallery/: basics.html  complex.html  dataset.html  diffusion.html  distributed.html  index.html  inverse_design.html  maxwell.html  physics_informed.html  poisson.html  wave.html
examples/: heat.py  wave.py
fem/: FEM.md
getting_started/: index.html  installation.html  quickstart.html  verify_install.html
performance/: benchmarks.html  index.html  profiling.html  scaling_guide.html
tensormesh/: __init__.py
torch_fem/: __init__.py  utils.py
user_guide/: batched_workflows.html  boundary_conditions.html  concepts.html  differentiability.html  elements_and_quadrature.html  forms.html  index.html  linear_solvers.html  meshes.html  time_integration.html
zh/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
(+470 files in other folders)
